--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,9 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
 
+# Custom variables
+show_downloads: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
